feat: add aladin

--- a/ac-frontend/index.html
+++ b/ac-frontend/index.html
@@ -12,9 +12,13 @@
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>AstroCollector</title>
+
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- Load Aladin embedded window -->
+    <script type="text/javascript" src="https://aladin.cds.unistra.fr/AladinLite/api/v3/latest/aladin.js"
+            charSet="utf-8"></script>
   </body>
 </html>
