feat: add catalog help page

--- a/ac-frontend/index.html
+++ b/ac-frontend/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-tsrouter-app"
+      content="AstroCollector: A Web-Based Platform for Unified Access to Stellar Photometric Data"
     />
     <link rel="manifest" href="/manifest.json" />
     <title>AstroCollector</title>
